# flit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.codex/: config.toml
.codex/agents/: reviewer.toml
.github/workflows/: ci.yml
agent-harness/: workflow.md
agent-harness/prompts/: implementation-review.md
agent-harness/templates/: task-plan.md
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.css  App.test.tsx  App.tsx  copy.ts  main.tsx  systemHealth.test.ts  systemHealth.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/macos/Resources/: Info.plist
apps/macos/Sources/FlitMac/: AppDelegate.swift  FoundationCopy.swift  FoundationStatusBadge.swift  FoundationViewController.swift  SystemHealthClient.swift  main.swift
apps/macos/Tests/: NativeHealthTests.swift
crates/flit-bridge/: Cargo.toml  uniffi.toml
crates/flit-bridge/src/: codex_recovery.rs  lib.rs
crates/flit-bridge/tests/: codex_recovery.rs
crates/flit-core/: Cargo.toml
crates/flit-core/src/: activity.rs  attention.rs  dashboard.rs  lib.rs  lifecycle.rs  permission_mode.rs  provider_policy.rs  request.rs  request_attention.rs  run_attention.rs  stuck.rs
crates/flit-core/tests/: activity.rs  attention.rs  dashboard.rs  lifecycle.rs  permission_mode.rs  provider_policy.rs  request.rs  request_attention.rs  run_attention.rs  stuck.rs
crates/flit-protocol/: Cargo.toml
crates/flit-protocol/src/: lib.rs
crates/flit-protocol/tests/: contract.rs
crates/flit-providers/: Cargo.toml
crates/flit-providers/fixtures/: codex-0.144.6-contract.jsonl  codex-0.144.6-method-allowlist.txt
crates/flit-providers/src/: codex_contract.rs  codex_transport.rs  executable.rs  lib.rs  probe.rs  process.rs  profile.rs  schema.rs  version.rs
crates/flit-providers/tests/: codex_contract.rs  compatibility.rs  executable.rs
crates/flit-store/: Cargo.toml
crates/flit-store/migrations/: 0001_initial.sql  0002_project_filesystem_identity.sql
crates/flit-store/src/: lib.rs  managed_runs.rs  projects.rs  writer.rs
crates/flit-store/tests/: checkpoints.rs  event_batches.rs  event_writer.rs  events.rs  managed_runs.rs  migrations.rs  projects.rs  snapshots.rs
fixtures/protocol/commands/v1.0/: protocol_mismatch.error.json  system_health.request.json  system_health.response.json
fixtures/protocol/events/: compatibility.json
fixtures/protocol/events/v1.0/: permission.requested.json
schemas/protocol/events/v1.0/: event.schema.json
scripts/: build-macos.sh  test-macos.sh  validate-docs.mjs  validate-docs.sh
tools/flit-bindgen/: Cargo.toml
tools/flit-bindgen/src/: main.rs
