[workspace]
members = [
    "crates/flit-bridge",
    "crates/flit-core",
    "crates/flit-protocol",
    "tools/flit-bindgen",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
