[package]
name = "flit-protocol"
description = "Rust source of truth for Flit frontend contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
schemars = { version = "=1.2.1", features = ["derive"] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = "=1.0.151"
ts-rs = { version = "=12.0.1", default-features = false, features = ["serde-compat", "serde-json-impl"] }

[dev-dependencies]
jsonschema = { version = "=0.48.5", default-features = false }

[lints]
workspace = true
