[package]
name = "flit-providers"
description = "Provider compatibility and capability contracts for Flit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rustix = { version = "=1.1.4", features = ["fs", "process"] }
serde_json = "=1.0.151"
sha2 = "=0.10.9"

[lints]
workspace = true
