[package]
name = "flit-store"
description = "SQLite persistence for the embedded Flit Core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
flit-protocol = { path = "../flit-protocol" }
rusqlite = { version = "=0.39.0", default-features = false, features = ["bundled"] }
serde = { version = "=1.0.229" }
serde_json = "=1.0.151"
sha2 = "=0.10.9"

[dev-dependencies]
rusqlite = { version = "=0.39.0", default-features = false, features = ["bundled"] }

[lints]
workspace = true
