[package]
name = "flit-desktop"
description = "Flit desktop composition root"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "flit_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
flit-protocol = { path = "../../../crates/flit-protocol" }
tauri = { version = "=2.11.5", features = [] }

[dev-dependencies]
serde_json = "=1.0.151"

[lints]
workspace = true
